--- a/gb/20/3/8/n11925013.md
+++ b/gb/20/3/8/n11925013.md
@@ -1,11 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/bvzsw2079/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bvzsw2079/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/bvzsw2079/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/bvzsw2079/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/bvzsw2079/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bvzsw2079/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/bvzsw2079/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/bvzsw2079/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/bvzsw2079/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/bvzsw2079/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/bvzsw2079/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/bvzsw2079/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/bvzsw2079/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/bvzsw2079/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/bvzsw2079/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/bvzsw2079/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/bvzsw2079/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/bvzsw2079/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/bvzsw2079/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/bvzsw2079/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/bvzsw2079/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/bvzsw2079/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/bvzsw2079/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/bvzsw2079/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/bvzsw2079/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/bvzsw2079/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/bvzsw2079/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/bvzsw2079/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/bvzsw2079/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/bvzsw2079/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/bvzsw2079/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/bvzsw2079/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/bvzsw2079/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/bvzsw2079/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/bvzsw2079/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/bvzsw2079/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/bvzsw2079/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/bvzsw2079/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/bvzsw2079/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/bvzsw2079/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/bvzsw2079/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/bvzsw2079/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/bvzsw2079/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/bvzsw2079/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/bvzsw2079/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vsrhmu3414/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vsrhmu3414/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vsrhmu3414/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vsrhmu3414/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vsrhmu3414/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vsrhmu3414/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vsrhmu3414/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vsrhmu3414/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vsrhmu3414/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vsrhmu3414/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vsrhmu3414/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vsrhmu3414/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vsrhmu3414/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/vsrhmu3414/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vsrhmu3414/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>轻铁持续故障 市议员吁解除与RTM合约</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/03/light-rail-Jonathan-head-600x400.jpg" />
-<h6></h6>
+<h6>据CBC报导，本周一（14日）是渥太华轻铁联邦线开通满一年。在过去一年里，联邦线问题层出不穷，市府不得不向承建商丽都运输集团（RTG）发出违约通知。随着中共病毒3月中旬全面爆发，轻铁乘客骤降，RTG也借机解决了不少故障。（任侨生/大纪元）
+</h6>
 <hr>
-<p>【大纪元2020年03月08日讯】（大纪元记者田青综合报导）问题不断的渥太华轻铁联邦线，近日又创下正式运营5个月来的最差表现。6辆列车在上下班高峰时段出现故障，导致通勤大乱，乘客被迫下车，甚至不得不沿着铁轨步行到下一个车站。有市议员提出，应该解除与丽都运输维护（RTM）的合约。</p>
+	<p>【大纪元2020年03月08日讯】（大纪元记者田青综合报导）问题不断的渥太华轻铁联邦线，近日又创下正式运营5个月来的最差表现。6辆列车在上下班高峰时段出现故障，导致通勤大乱，乘客被迫下车，甚至不得不沿着铁轨步行到下一个车站。有市议员提出，应该解除与丽都运输维护（RTM）的合约。</p>
 <p><strong>轻铁持续故障 营运车辆再创新低</strong></p>
 <p>2月26日下午高峰时段，4小时内4辆列车停运。先是下午4点，St-Laurent站以东一段用于列车顶部供电的电缆先松后断，导致列车停运。乘客被迫下车，然后不得不沿着轨道步行至St-Laurent车站。1个多小时后的下午5:20左右，Tremblay站以东的一辆西行列车又因修复断裂的电缆而停运，由于离车站较远，乘客必须横穿铁轨乘另一辆列车到达下一站。晚上7:20左右，uOttawa站的一辆西行列车因断电而停运；半个多小时后，Bayview站的一辆东行列车因开门故障停运。</p>
 <p>列车顶部电缆于26日午夜修复，但在维修场出现了其它电源问题。这些问题，外加3辆列车正在“大修”，导致2月27日早高峰时段仅9辆列车运行，之后继续下降到7辆，一度甚至仅5辆，是联邦线运营5个月来的最低水平。</p>
@@ -26,44 +27,47 @@
 <p>Ottawa Centre国会议员、联邦基础设施部长Catherine McKenna也表达了对渥太华轻铁问题的关注。她说：“联邦资助的项目，必须以公正、公平和透明的方式被监督，以确保我们的投资物有所值。”</p>
 <p>她并表示，期待看到渥太华轻铁2期工程的复审，需要“确保我们不会经历现在这样的挑战”。</p>
 <p>责任编辑：朱莉</p>
-
+	
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/3/8/n11925013.htm">轻铁持续故障 市议员吁解除与RTM合约</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/19/4/10/n11177330.htm">安省公布285亿公交计划</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/4/6/n11168017.htm">渥太华市府与SNC-Lavalin达成第二阶段轻轨合同</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/11/15/n10852964.htm">渥太华轻轨和警力将配置新无线电系统</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/9/19/n10726442.htm">渥太华轻轨冬季运营面临新挑战</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/5/31/n10445093.htm">选民关心头等大事 看安省各党派政纲如何响应</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/5/29/n10438084.htm">列治文山急需地铁? 省候选人献策</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/5/9/n10378035.htm">福特：若当选 50亿助多伦多扩建地铁</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/3/7/n10199554.htm">渥太华轻轨建设安全事故居安省同类工程之首</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/2/16/n10147639.htm">市府要轻承包商承担轻轨延期损失</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/3/7/n11922826.htm">福建泉州隔离点酒店突然坍塌 数十人被埋</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/7/n11923221.htm">武汉要市民感恩总书记激民愤 高层下令收回</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/7/n11923398.htm">福建隔离酒店两秒倒塌 目击者：底层先粉碎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/7/n11923242.htm">美中记者签证 一份报告曝中共不敢说的事</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/5/n11918136.htm">透露天机 太白山刘伯温碑记更多内涵</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11877988.htm">上天有眼下蝗虫雨  蝗虫侵袭也长眼睛？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/2/n11908043.htm">子丑之年江边起──预言中的“大瘟疫”</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/5/n11918064.htm">因果循环：为一场地震 冥界筹备了五十年</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/6/n11919716.htm">网络热传天津军机坠毁 引发联想和猜测</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/5/n11917920.htm">曾活着被送火化炉 湖北女教师凄惨离世</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/6/n11920481.htm">中央候补委员官庆去世 传是华春莹丈夫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/7/n11921679.htm">【拍案惊奇】广州深圳爆示威 放“国歌”被封号</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/7/n11922690.htm">【直播】3.7新肺炎追踪：“感恩党”遭骂翻</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/6/n11918954.htm">【十字路口】病毒甩不掉 中共该向国人及世界道歉</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/7/n11923475.htm">周润发母亲睡梦中辞世 疫情下低调举行丧礼</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/6/n11921138.htm">张晋凌晨三点给儿子喂奶 蔡少芬：上夜班</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/7/n11922611.htm">子瑜返台居家检疫 TWICE叮咛粉丝注意健康</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/6/n11920208.htm">IU捐款3.15亿韩圜助抗疫 苏志燮也捐3亿韩圜</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/3/6/n11919459.htm">歌手大支发布《台湾队长》 向防疫英雄致敬</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/18/2/16/n10147639.md#1">市府要轻承包商承担轻轨延期损失</a></li>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/18/3/7/n10199554.md#1">渥太华轻轨建设安全事故居安省同类工程之首</a></li>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/18/5/9/n10378035.md#1">福特：若当选 50亿助多伦多扩建地铁</a></li>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/18/5/29/n10438084.md#1">列治文山急需地铁? 省候选人献策</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/bvzsw2079/djy/blob/master/gb/20/3/8/n11925013.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/bvzsw2079/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvzsw2079/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/bvzsw2079/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/bvzsw2079/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/bvzsw2079/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvzsw2079/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/bvzsw2079/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvzsw2079/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/bvzsw2079/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvzsw2079/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/bvzsw2079/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvzsw2079/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/bvzsw2079/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvzsw2079/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/bvzsw2079/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvzsw2079/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/bvzsw2079/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvzsw2079/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/bvzsw2079/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvzsw2079/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/bvzsw2079/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvzsw2079/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/bvzsw2079/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvzsw2079/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/bvzsw2079/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvzsw2079/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/bvzsw2079/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvzsw2079/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/bvzsw2079/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvzsw2079/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/bvzsw2079/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvzsw2079/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/bvzsw2079/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvzsw2079/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/bvzsw2079/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvzsw2079/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/bvzsw2079/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvzsw2079/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/bvzsw2079/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvzsw2079/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/bvzsw2079/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvzsw2079/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/bvzsw2079/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvzsw2079/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/bvzsw2079/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvzsw2079/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/bvzsw2079/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bvzsw2079/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/15/n10395165.md#1" target="_blank">【还原史实】谁在对日抗战？谁在借机发展？</a></li><li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/11/10/16/n3402449.md#1" target="_blank">辛灏年演讲片段: 驱除马列文化 还我民族之魂</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/15/n12621699.md#1">印裔占星师分析 川普未来一个月如何逆转胜</a></li>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/9/n12605810.md#1">《诸世纪》预言抽丝剥茧 掀美大选黑幕真相</a></li>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/11/n12614366.md#1">尼姑癌症末期意外痊愈 修炼为何能改善疾病？</a></li>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/7/25/n12283438.md#1">晴雯的身世  富察傅恒的奶娘，繁华散场时的女子</a></li>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/11/27/n12580489.md#1">太学生不识朱元璋 吟诗一首登仕途</a></li>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630544.md#1">【重播】多米尼证人指控其CEO作证时撒谎</a></li>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12629475.md#1">亚利桑那马县就选举诉讼举行会议</a></li>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/15/n12623326.md#1">【罗厨寻味】红烧牛腩</a></li>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12627138.md#1">川普宣布延长紧急状态 以应对国家安全威胁</a></li>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12628468.md#1">撑警李偲嫣染疫猝死 网络沸腾建制派一片沉寂</a></li>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12628480.md#1">林伍德曝最高法院拒德州诉讼四州案内幕</a></li>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/16/n12623537.md#1">疑向中共下跪 梁朝伟漫威角色“满大人”改名</a></li>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/16/n12625572.md#1">遭小粉红无谓攻击 香港歌手关淑怡发长文怒怼</a></li>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/16/n12625818.md#1">疑染疫身亡的李偲嫣 曾任张国荣歌迷会会长</a></li>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/16/n12625338.md#1">《神力女超人1984》影评：一流英雄片</a></li>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12626443.md#1">韩国政府强化防疫 BLACKPINK线上演唱会延期</a></li>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/7/n12600078.md#1">厕所异味有原因！3个清洁妙方除臭又去污垢</a></li>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/13/2/9/n3797754.md#1">这种飞蚊症不用怕！2招改善 赶走恼人飞蚊</a></li>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/16/n12624214.md#1">iPhone 6s手机从飞机坠地没坏 拍下整个过程</a></li>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/14/n12619631.md#1">掌握这些技巧 在家也能品尝职人手冲咖啡</a></li>
+<li><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/16/n12624416.md#1">311大地震被海啸冲走 日本渔船10年后现身</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/vsrhmu3414/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/vsrhmu3414/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/3/8/n11925013.htm">轻铁持续故障 市议员吁解除与RTM合约</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/vsrhmu3414/djy/blob/master/gb/20/3/8/n11925013.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vsrhmu3414/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vsrhmu3414/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vsrhmu3414/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vsrhmu3414/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vsrhmu3414/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vsrhmu3414/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vsrhmu3414/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vsrhmu3414/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vsrhmu3414/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vsrhmu3414/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vsrhmu3414/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vsrhmu3414/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vsrhmu3414/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vsrhmu3414/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vsrhmu3414/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vsrhmu3414/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vsrhmu3414/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vsrhmu3414/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vsrhmu3414/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vsrhmu3414/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vsrhmu3414/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vsrhmu3414/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vsrhmu3414/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vsrhmu3414/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vsrhmu3414/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vsrhmu3414/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
