--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/jfmcky3552/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/jfmcky3552/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/jfmcky3552/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/jfmcky3552/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/jfmcky3552/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">罪恶</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631460.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/12/000_8WZ7KL-320x200.jpg"><p align="center">川普签署外企问责法 中企不合规就下市</p></a>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631460.md#1" title="川普签署外企问责法 中企不合规就下市""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/000_8WZ7KL-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631308.md#1" title="川普团队顾问：料在宾州采取更多法律行动""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/epstein-700x420-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12631090.md#1" title="美能源部禁关键电力公司购买中企设备""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/Dan-Brouillette-1200x835-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630991.md#1" title="反制中共侵犯人权 蓬佩奥：制裁59中国实体""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1209520023-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630544.md#1" title="【重播】多米尼证人指控其CEO作证时撒谎""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/Dominion-1-1200x768-600x400-1-320x200.jpg">&nbsp;</a>
@@ -11,14 +12,13 @@
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630320.md#1" title="【新闻大家谈】巨兽握免死牌？川普誓反击""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/fc3609c2ada90f8313560ad88d130768-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630086.md#1" title="美国38州对谷歌提反垄断诉讼""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/08/GettyImages-1154955595-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12630222.md#1" title="美商务部将中芯国际等数十中企列入黑名单""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/07c1449a62e5d3c0aa4d54a1619c034a-600x400-1-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629629.md#1" title="选举人团对决 在国会联席会议能翻盘吗？""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/A4-4-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/jfmcky3552/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://jfmcky3552.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631318.md#1">运费升 汇率涨 外加限电 大陆企业苦挣扎</a><br>
-:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631463.md#1">台故宫南院人气国宝展 唐伯虎画作不容错失</a><br>
-:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631460.md#1">川普签署外企问责法 中企不合规就下市</a><br>
-:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631360.md#1">碳火锅店无通风似“毒气室” 东北12客中毒</a><br>
-:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631405.md#1">白宫通知国会 准备关闭最后两个驻俄领事馆</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631243.md#1">【远见快评】美国防部暂停过渡 四方皆惊</a><br>
+:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631514.md#1">电商创始人公开质证希拉里接受外国政府1800万</a><br>
+:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631538.md#1">染疫住院数首降 州府批准Moderna疫苗</a><br>
+:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631531.md#1">白思豪称NYPD应反省打击BLM 引警察工会不满</a><br>
+:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631524.md#1">抗议中共渗透美国 纽约人中领馆怒撕血旗</a><br>
+:clock8: <em>10分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631520.md#1">特殊高中1/21前报考 纽约市议员参选人王能举办“法拉盛教育日”</a><br>
+:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/19/n12631536.md#1">户外用餐不能入内使用厕所？纽约州府周五开绿灯</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/17/n12627138.md#1">川普宣布延长紧急状态 以应对国家安全威胁</a><br>
 <a href="https://github.com/jfmcky3552/djy/blob/master/gb/20/12/18/n12629245.md#1">【翻墙必看】首席大法官罗伯茨被曝丑闻</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 369,587,532 人
+!共 369,587,857 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
